# Ampel-PanSTARRS

./: pyproject.toml
ampel/contrib/hu/t2/: T2PS1ThumbNedSNCosmo.py  T2PS1ThumbNedTap.py  T2PanStarrThumbPrint.py
conf/ampel-hu-astro/: unit.yml
