[tool.poetry]
name = "ampel-panstarrs"
version = "0.10.0a0"
license = "BSD-3-Clause"
readme = "README.md"
description = "Pan-STARRS query units for the Ampel system"
homepage = "https://ampelproject.github.io"
repository = "https://github.com/AmpelAstro/Ampel-PanSTARRS"
authors = [
    "Valery Brinnel",
    "Jakob van Santen <jakob.van.santen@desy.de>",
    "Jakob Nordin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
packages = [
    {include = "ampel"}
]
include = [
    'conf/*/*.json',
    'conf/*/*/*.json',
    'conf/*/*.yaml',
    'conf/*/*/*.yaml',
    'conf/*/*.yml',
    'conf/*/*/*.yml',
]

[tool.poetry.dependencies]
python = "^3.10"
ampel-plot = {version = "^0.9.0a2", source = "pypi"}
ampel-interface = {version = ">=0.10.4a0,<0.11"}
ampel-photometry = {version = ">=0.10.1a0,<0.11"}
# pymage never made it to pypi; distribute our own package
pymage = {version = "^0.5", source = "desy-gitlab"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
# pytest = "^8.0.2"
# pytest-mock = "^3.12.0"
# types-requests = "^2.25.9"
# types-pytz = "^2022.1.2"
# types-pillow = "^10.2.0.20240213"

[[tool.poetry.source]]
name = "desy-gitlab"
url = "https://gitlab.desy.de/api/v4/projects/jakob.van.santen%2Fampel-pypi-demo/packages/pypi/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=40.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
namespace_packages = true
show_error_codes = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "numpy.*",
  "scipy.*",
  "pymongo.*",
  "bson.*",
  "matplotlib.*",
  "pandas.*",
  "seaborn.*",
  "astropy.*",
  "ampel.model.PlotProperties",
  "ampel.plot.utils",
  "dl.*",
  "lcdata.*",
  "timeout_decorator.*",
  "parsnip.*",
  "sncosmo.*",
  "requests_toolbelt.*",
  "adjustText.*",
  "extcats.*",
  "voeventparse.*",
  "healpy.*",
  "light_curve.*",
  "xgboost.*",
  "ligo.*",
  "ztfquery.*",
  "joblib.*",
  "confluent_kafka.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=ampel --showlocals -ra"
filterwarnings = [
    "error",
    "always:numpy.ndarray size changed:RuntimeWarning",
    "ignore:Deprecated call to `pkg_resources.declare_namespace\\('ligo'\\):DeprecationWarning",
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    "ignore:(?s).*Pyarrow will become a required dependency of pandas:DeprecationWarning",
]

[tool.black]
line-length = 88

[tool.ruff]
target-version = "py310"
exclude = [
    "ampel/contrib/hu/xgb_trees.py",
    "notebooks",
    "scripts",
    "setup.py",
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP", # pyupgrade
    "B", # bugbear
    "DTZ", # datetimez
    "T20", # print statements
    # "PT", # pytest-style
    "RET", # return
    "SLF",
    "SIM",
    # "ARG", # sometimes your arguments have to conform to an interface
    # "ERA", # seems to prohibit all comments, that's bad
    "PL",
    "PERF",
    "RUF",
]
ignore = [
    "E741", # ambiguous variable name
    "UP009", # UTF-8 encoding declaration is unnecessary
    "PLR09", # too many (arguments|branches)
    "PLR2004", # Magic value used in comparison
    "RUF012", # fine for AmpelUnit, actually (ruff has a special case for pydantic)
    "RUF023", # unsorted __slots__ are fine
]
